syntax ="proto3";

package calcpb;

option go_package="mskKandula/calcpb";

message IntegerData{
    int32 first_num=1;
    int32 second_num=2;
}

message CalcRequest{
    IntegerData integer_data=1;
}

message CalcResponse{
    int64 result =1;
}

message CalcManyRequest{
    int32 number=1;
}

message CalcManyResponse{
    int32 result=1;
}

message LongCalcRequest{
    int32 number=1;
}

message LongCalcResponse{
    float result=1;
}

service CalcService{
    // Unary
    rpc Sum(CalcRequest)returns(CalcResponse){};

    // Server Streaming
    rpc Prime(CalcManyRequest)returns(stream CalcManyResponse){};

    // Client Streaming
    rpc Average(stream LongCalcRequest)returns(LongCalcResponse){};
}

